@@ -45,3 +45,4 @@ film.outputs.1.filename = "ALBEDO.exr"
 film.outputs.2.type = "AVG_SHADING_NORMAL"
 film.outputs.2.filename = "AVG_SHADING_NORMAL.exr"
 scene.file = "scene.scn"
+#film.subregion = 350 550 100 300
